--- a/src/app/commonComponent/dropdown/dropdown.component.html
+++ b/src/app/commonComponent/dropdown/dropdown.component.html
@@ -1,6 +1,6 @@
 <div class="input-container">
     <span  class="fz-12px opacity-50per">Enter name</span>
-    <input type="text" (input)="onInputChange($event.target?.['value'])" placeholder="Enter Name" />
+    <input type="text"  placeholder="Enter Name" />
 </div>
   
   
