--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,14 +6,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
+  <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <title>Admin</title>
+  <title>Admin</title> -->
 </head>
 
-<body class="d-flex flex-column">
-  <div  [ngClass]="{'hidden': showHeaderFooter}" class="header" style="height: 100px;">
+<body class="d-flex flex-column" >
+  <div [ngClass]="{'hidden': showHeaderFooter}" class="header" style="height: 100px;">
     <app-header></app-header>
   </div>
   <div class="pageContainer flex-grow-1">
