working in create project

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,8 +29,8 @@
 @import "./assets/css/tables.scss";
 @import "./assets/css/reset";
 @import "./assets/css/variables";
-// @import "../node_modules/ng-pick-datetime/assets/style/picker.min.css";
-// @import "./assets/css/main.scss";
+@import "../node_modules/ng-pick-datetime/assets/style/picker.min.css";
+@import "./assets/css/main.scss";
 
 // .drawflow .drawflow-node {
 //   display: flex;
