--- a/src/app/pages/createproject/createproject.component.scss
+++ b/src/app/pages/createproject/createproject.component.scss
@@ -1,3 +1,5 @@
+//https://css-tricks.com/the-shapes-of-css/#diamond-square-shape-via-joseph-silber --> For multiple shape of box
+
 @import "../../../../node_modules/drawflow/dist/drawflow.min.css";
 
 .drawflow-wrapper {
@@ -9,6 +11,16 @@
     padding: 10px;
     background-color: #f5f5f5;
     border-right: 1px solid #ccc;
+  }
+
+  .drawflow .drawflow-node{
+    width: unset;
+    background : unset;
+    border : unset;
+  }
+
+  .drawflow .drawflow-node.selected{
+    background-color: unset;
   }
   
   .drag-node {
@@ -63,4 +75,86 @@
   .collapse{
     margin-left: 50px;
   }
+
+  .drawflow-node.drawflow-node-rect {
+    width: 150px;
+    height: 100px;
+    background-color: #3498db;
+    border: 2px solid #2980b9;
+  }
+
+  .drawflow-node.drawflow-node-circle {
+    width: 100px !important;
+    height: 100px !important;
+    background-color: #2ecc71 !important;
+    border: 2px solid #27ae60 !important;
+    border-radius: 50% !important;
+  }
+
+
+  .drawflow-node.drawflow-node-parallelogram {
+    width: 150px;
+    height: 100px;
+    transform: skew(20deg);
+    background: red;
+  }
+
+  .diamond {
+    //position: absolute !important;
+    height: 200px;
+    width: 200px !important;
+    line-height: 200px;
+    text-align: center;
+    //margin: 10px 40px;
+  }
+  .diamond::before {
+    position: absolute !important;
+    content: '';
+    top: 10px;
+    left: 20px;
+    height: 78%;
+    width: 78%;
+    transform: rotateX(45deg) rotateZ(45deg);
+    box-shadow: 0px 0px 12px gray;
+  }
+  // .diamond::after {
+  //    position: absolute !important;
+  //   top: 10px;
+  //   left: 10px;
+  //   content: '';
+  //   height: calc(100% - 22px);  /* -22px is 2 * 10px gap on either side - 2px border on either side */
+  //   width: calc(100% - 22px);  /* -22px is 2 * 10px gap on either side - 2px border on either side */
+  //   border: 1px solid orange;
+  //   transform: rotateX(45deg) rotateZ(45deg);
+  // }
+
+  .hexagon {
+    width: 100px !important;
+    height: 57.735px !important;
+    background: red !important;
+    position: relative;
+  }
+  .hexagon::before {
+    content: "";
+    position: absolute;
+    top: -28.8675px;
+    left: 0;
+    width: 0;
+    height: 0;
+    border-left: 50px solid transparent;
+    border-right: 50px solid transparent;
+    border-bottom: 28.8675px solid red;
+  }
+  .hexagon::after {
+    content: "";
+    position: absolute;
+    bottom: -28.8675px;
+    left: 0;
+    width: 0;
+    height: 0;
+    border-left: 50px solid transparent;
+    border-right: 50px solid transparent;
+    border-top: 28.8675px solid red;
+  }
+  
   
