--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,9 +1,9 @@
 <div class="main-menu">
-    <div class="container-fluid">
+    <div class="container-fluid px-5">
         <ul>
             <li *ngFor="let item of menuItems" [ngClass]="{'active': isActive(item.route)}">
                 <a [routerLink]="item.route">
-                  {{ item.label }}
+                    {{ item.label }}
                 </a>
             </li>
         </ul>
