--- a/src/styles.scss
+++ b/src/styles.scss
@@ -144,64 +144,75 @@ dl {
 
 
 /* font size */
-.fz-16px{
+.fz-16px {
   font-size: 16px;
 }
-.fz-24px{
+
+.fz-24px {
   font-size: 24px;
 }
-.fz-30px{
+
+.fz-30px {
   font-size: 30px;
 }
-.fz-42px{
+
+.fz-42px {
   font-size: 42px;
 }
-.fz-45px{
+
+.fz-45px {
   font-size: 45px;
 }
-.fz-1rem{
+
+.fz-1rem {
   font-size: 1rem;
 }
-.fz-1-5rem{
+
+.fz-1-5rem {
   font-size: 1.5rem;
 }
 
 /* font style */
 
-.fw-bold{
+.fw-bold {
   font-weight: bold;
 }
 
 /* color  */
 
-.c-white{
+.c-white {
   color: white;
 }
 
 /* width  */
 
-.w-200px{
+.w-200px {
   width: 200px;
 }
 
-.w-50vw{
+.w-50vw {
   width: 50vw
 }
 
-.w-100vw{
+.w-100vw {
   width: 100vw;
 }
 
 
 /* height  */
 
-.h-100vh{
+.h-100vh {
   height: 100vh;
 }
 
 
 // cursor
 
-.cursor-pointer{
+.cursor-pointer {
   cursor: pointer;
+}
+
+.scroll {
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
