--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
     <div class="top-section">
-        <div class="container-fluid">
+        <div class="container-fluid px-5">
             <div class="row">
                 <div class="col-md-6">
                     <div class="logo">
@@ -25,7 +25,8 @@
                             <li>
                                 <div class="nav-author">
                                     <div class="btn-group">
-                                        <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                        <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown"
+                                            aria-expanded="false">
                                             <div class="user-setting-wrap">
                                                 <div class="user-icon">
                                                     <img src="../../assets/images/my-brand-frame.png" alt="">
