--- a/src/app/pages/nodeconfiguration/nodeconfiguration.component.html
+++ b/src/app/pages/nodeconfiguration/nodeconfiguration.component.html
@@ -375,7 +375,7 @@
                         </div>
                     </div>
 
-                    <div class="d-flex justify-content-center align-items-center">View</div>
+                    <div class="d-flex justify-content-center align-items-center cursor-pointer">View</div>
                 </div>
             </div>
         </div>
